Discussion - auxiliary hypotheses and predictions

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -328,6 +328,7 @@ Dr Watts saw evidence of follicle degeneration in wrinkled sheep. His statement 
 There are no measurements to support this statement. The fibre defects referred to are fibre naps. 
 
 \subsection{Wrinkle patterns over the body}
+\label{sec:pattern}
 The small {\em pin} wrinkles which all Merinos have do not seem to make any pattern. They are uniform across the body of the sheep. We are considering, in this section, patterns in the large folds which develop ( in wrinkled sheep only) after birth and up to maturity. These form a very consistent pattern which was documented by Carter(1943)~\cite{cart:43}. Dr Carter actually named each fold, and recognized that each fold along the body of the sheep was associated with successive vertebrae along the spine. The pattern is therefore very regular from sheep to sheep. Only the size of folds varies, not the pattern.
 
 Figure~\ref{fig:sheep} shows a photograph of two Merino ewes, with and without wrinkle. 
@@ -363,15 +364,15 @@ In addition we know the following from other published work
 \item in developing skin of Karakul sheep follicle bulbs can be seen to be deflected sideways by the collagen layer in the dermis (Dreyer, et al (1983)~\cite{drey:83})
 \end{itemize}
 
-We have two hypotheses which explain the above observations
+We have three hypotheses which explain the above observations
 \subsection{Two layer folding hypothesis}
-Perhaps the most important result above is the negative one. There were no histological differences between skin sampled on a fold or between folds in wrinkled sheep. A fold is therefore not and additional organelle which grows on top of the skin; the tissues within a fold are exactly the same tissues as in skin between folds. What , therefore causes the skin to fold?
+Perhaps the most important result above is the negative one. There were no histological differences between skin sampled on a fold or between folds in wrinkled sheep. A fold is therefore not an additional organelle which grows on top of the skin; the tissues within a fold are exactly the same tissues as in skin between folds. What , therefore causes the skin to fold?
 
 We maintain that skin folds are formed the same way as all other tissue folds. A fold forms because some layers of the skin grow faster than other layers.  Any dual layer structure will curve if one layer changes length or area faster than the other layer. A bimetal strip is one example. In biology, curved surfaces are formed by non-allometeric growth. (Thompson(1917)~\cite{thom:17}).
 
 We can identify the layers involved. In the case of large folds, we know from Mitchell et al (1984)~\cite{mitc:84} that a fold contains epidermis, papillary dermis and reticular or lower dermis, but not the muscle and fat layers.  So the two super-layers that differ in growth rate are (a) layers 1,2, 3 together, and (b) layers 4 and 5 together. s sheep mature and large folds form super-layer (a) grows faster.  So why do sheep with large folds have more collagen and more Type 1 (hard) collagen? Because the presence of hard collagen in the lower dermis binds the lower edge of the dermis to the muscle and fat layers below and prevents them from expanding to match the growth of super-layer (a). The collagen binds the boundary beteen super-layers (a) and (b).
 
-That is not the whole story of large folds. For large folds to form there has to also be excessive growth of super-layer(a) as the sheep matures. We are not sure whether this excess growth of (a) occurs as a result of maturation of the large number of secondary original follicles in Merinos, or whether it is just a genetic signal to grow more skin. What happens in Merino sheep without large folds is that the excess growth of super-layer (a) still occurs, but super-layer (b)  is not bound by hard collagen at the boundary with super-layer(a), so both layers can expand together and the skin on the sheep feels loose and supple. Other breeds of sheep ( eg British breeds) do not have the excessive growth of super-layer (a) as they mature, so they do not form folds, regardless of whether they have hard collagen. This suggests that the excessive growth of super-layer (a) in Merinos is indeed due to the need to fully develop large numbers of secondary original follicles. 
+That is not the whole story of large folds. For large folds to form there has to also be excessive growth of super-layer(a) as the sheep matures. We are not sure whether this excess growth of (a) occurs as a result of maturation of the large number of secondary original follicles in Merinos, or whether it is just a genetic signal to grow more skin. What happens in Merino sheep without large folds is that the excess growth of super-layer (a) still occurs, but super-layer (b)  is not bound by hard collagen at the boundary with super-layer(a), so both layers can expand together and the skin on the sheep feels loose and supple. Other breeds of sheep ( eg British breeds) do not have the excessive growth of super-layer (a) as they mature, so they do not form folds, regardless of whether they have hard collagen. This suggests that the excessive growth of super-layer (a) in Merinos is indeed due to the need to fully develop large numbers of secondary original follicles and their accessory glands. 
 
 In the case of pin-wrinkle, we know that the tiny pin-wriunkle folds start to form in-utero at around days 80 to 100. That is exactly the time window in which the large population of secondary original follicles is forming in Merino sheep. We suggest that the formation of large numbners of secondary original follicles dramatically increases expansion of the epidermis and papillary dermis, while the lower dermis is held at a slower growth by the development of collagen. So in the case of pin-wrinkle the super layers are (a) epidermis and papillary dermis, and (b) lower dermis, muscle and fat layers.
 
@@ -384,18 +385,46 @@ Given the above, we are led to suggest that there are two independent factors in
 \item[secondary original follicles] this leads to excessive growth of the upper dermis both in utero and as the sheep matures.
 \end{description}
 
-These 2 factors apply to both pin wrinkle and large folds. It is just the layersthat differ.
+These 2 factors apply to both pin wrinkle and large folds. It is just the layers that differ.
  
 \subsection{Follicle curvature hypothesis}
 Perhaps the next most important result is the observation that wrinkled Merinos invariably have curved follicles. We suggest that this happens because the downgrowth of follicle plugs from the epidermis into the papillary dermis which occurs from days 60-100 in the foetus is interfered with by the presence of large amounts of developing collagen in the lower part of the papillary dermis and the reticular dermis. Growth of follicle plugs downward is inhibited by the presence of collagen and they continue to grow, but deflect sideways.
 
-There are photomicrographs in Hardy and Lyne (1956)~\cite{hard:56} in which one can actually see follicle plugs curved, before the are growing a fibre. If this is correct we have actually solved the 'chicken and egg' argument about fibre curvature and follicle curvature. Follicle curvature comes first. The fibres curve because they grow into a curved tube. The bilateral ortho and para cortex arrangement in curved Merino fibres is a consequence of the fibre developing in a curved tubular space, not a cause of the curvature. The cortical cells differentaite differently on the inside of the curve because they are in a cramped space.
+There are photomicrographs in Hardy and Lyne (1956)~\cite{hard:56} in which one can actually see follicle plugs curved, before the are growing a fibre. If this is correct we have actually solved the 'chicken and egg' argument about fibre curvature and follicle curvature. Follicle curvature comes first. The fibres curve because they grow into a curved tube. The bilateral ortho and para cortex arrangement in curved Merino fibres is a consequence of the fibre developing in a curved tubular space, not a cause of the curvature. The cortical cells differentaite differently on the inside of the curve because they are in a more cramped space.
 
 So the spatial distibution of collagen is involved in follicle curvature. That is not quite the same thing as presence of hard collagen, but it suggests that follicle curvature and wrinkle have one common cause.
+
+\subsection{Auxiliary issues}
+ The pattern of folds over the sheep's body noted in section~\ref{sec:pattern} is not fully understood. The fact that the folds always run in the same direction implies that either the expansion in superlayer (a) is directional, or the collagen binding in super-layer (b) is directional, or some other factor interferes to provide a direction. We are not sure, but we favour the last possibility, because another factor can be identified. We have noted that each fold occupies one dermatome. A dermatome is an area of skin associated with one major nerve channel which runs from the spine downwards. The position of the nerve channel may be involved in deciding where the skin is to fold. The major nerve channel is in the hypodermus, and minor nerves run from there into the dermis, like risers in a plumbing system. So at the position where the 'risers' cross from hypodermis to dermis the two layers cannot move independently. So at these points the two layers would be 'anchored' together. There are rows of such 'anchor points' running from the spine downward. The skin folds parallel to these rows. We do not know if the rows of anchor points are under the folds, or between folds. That is, we do not know where the major nerve channel is in relation to the fold. One might guess that the 'anchor points' are between folds so that the expansion of super-layer (a) between each pair of anchor points forms the fold.
+
+There are also major blood vessels in the hypodermis, both arteries and veins. Thes also have minor branches which cross the boundary into the dermis, like risers.   There is some information on nerves and blood vessels in sheep skin in Lyne and Hollis (1968)~\cite{lyne:68}, but we have been unable to find the exact arrangement of blood vessels. The same  considerations apply as for nerves, the blood vessels may determine 'anchor points' at which the dermis cannot move against the hypodermis.
+
+Wrinkled and wrinkle-free sheep also differ in follicle density, S/P ratio, diameter of primary fibres (Dp) and diameter of secondary fibres (Ds). Three of these (follicle density, Dp, and Ds) can be understood as effects of the greater expansion of the upper skin layers in wrinkled sheep. Wrinkled sheep have more skin area, but they do not have more follicles per head, because the follicles are all formed in utero, while the skin expansion occurs after birth as the sheep matures. This simply spreads the follicles over more skin, and the density is less. The effects on Dp and Ds are a consequence of the density effect.  However the lower S/P ratio of wrinkled sheep is not thus explained.  The diameter results are confirmed by Scobie et al (2005)~\cite{scob:05}
+
+Apart from being more curved, follicles in wrinkled sheep are also longer. Both the straight length and the curved length are greater. Also the traditional follicle depth measure, which is the average vertical distance of follicle bulbs below the skin surface, is also larger in wrinkled sheep.  If the presence of collagen makes fdeveloping follicles curve, is it possible that it also prolongs their development so that they grow longer? 
+
+There is a biological connection between the development of follicles and the development of collagen. The papilla cells in follicles are differentiated fibroblasts. The fibrocyte cells which produce collagen fibres are also differentiated fobroblasts.  There is an established theory about the way pre-papilla cells distribute to follicle papillae, and the effects this has on follicle density and fibre diameters (Moore et al (1989)~\cite{moor:89}, Moore et al (1998)~\cite{moor:98}). There is no such theory for collagen. It may be that the population of fibroblast cells is limited in number at some stages so that a {\em tradeoff} sitauation might exist between follicle development and collagen development. This might explain the lower S/P ratio of wrinkled sheep.
+
+\subsection{Predictions}
+We can check if the above hypotheses are robust by using them to predict some previously unobserved phenomena. We make the folowing predictions
+\begin{description}
+\item[wrinkle epistasis]
+\item[follicle orientation]
+\item[curvature and diameter]
+\item[non-Merino breeds]
+\item[pin wrinkle and secondary original follicles]
+\end{description}
+
+\subsection{Checking on predictions}
+
+\section{Conclusion}
+
+
 
 
 
 \clearpage
+
 \begin{thebibliography}{99}
 
 \bibitem{bogo:40}
@@ -421,9 +450,6 @@ Hardy, M.H. and Lyne, A.G. (1956) The pre-natal development of wool follicles in
 
 \bibitem{jack:75}
 Jackson, N., Nay, T, and Turner, Helen Newton (1975) Response to selection in Australian Merino sheep. VII Phenotypic and genetic parameters for some wool follicle characteristics and their correlation with wool and body traits. Aust. J. Agric. Res. 26:937-57
-
-\bibitem{jack:15}
-Jackson, N. (2015) Genetic relationship betweeen skin and wool traits in Merino sheep. Incomplete manuscript.
 
 \bibitem{jack:17}
 Jackson, N. (2017) Genetics of primary and secondary fibre diameters and densities in Merino sheep. URL https://github.com/nevillejackson/atavistic-sheep/mev-rewrite/supplementary/genetic-parameters/psparam.pdf
@@ -455,6 +481,8 @@ Kozslowski, G.P. (1966) The microscopic anatomy of theintegument of sheep. M.S. 
 \bibitem{latt:14}
 Lattouf, R., Younes, P., Lutomski, D., Naaman, N., Godeau, G., Senni, K. and Changotade, S. (2014  Picrosirius red staining: a useful tool to appraise collagen networks in normal and pathological tissues. J. Histochem. Cytochem. 62(10): 751-758
 
+\bibitem{lyne:68}
+Lyne, A.G., Hollis, D.E. (1968) The skin of sheep: A comparison of body regions. Aust. J. agric. Res. 22:499-527
 \bibitem{madd:88}
 Maddocks, I.G. and Jackson, N. (1988) Structural studies of sheep, cattle, and goat skin. CSIRO, Division of Aimal Production, Sydney.
 
@@ -480,6 +508,9 @@ R Core Team (2013). R: A language and environment for statistical
 
 \bibitem{ryde:68}
 Ryder, M.L. and Stevenson, S.K.(1968) Wool Growth. Academic Press, London.
+
+\bibitem{scob:05}
+Scobie, D.R., Young, S.R., O'Connell, D., and Gurteen, S. (2005) Skin wrinkles affect wool characteristics and the time taken to harvest wool from Merino and Halfbred sheep N.Z. Jour. Agric. Res. 48:177-185
 
 \bibitem{sedd:31}
 Seddon, H.R., Belschner, H.G. and Mulhearn, C.R. (1931)  Studies on cutaneous myiasis of sheep. Sew South Walse Department of Agriculture, Science Bulletin No 37, 1931
