Start on predictions and verifications

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -364,7 +364,7 @@ In addition we know the following from other published work
 \item in developing skin of Karakul sheep follicle bulbs can be seen to be deflected sideways by the collagen layer in the dermis (Dreyer, et al (1983)~\cite{drey:83})
 \end{itemize}
 
-We have three hypotheses which explain the above observations
+We have three hypotheses which may explain the above observations
 \subsection{Two layer folding hypothesis}
 Perhaps the most important result above is the negative one. There were no histological differences between skin sampled on a fold or between folds in wrinkled sheep. A fold is therefore not an additional organelle which grows on top of the skin; the tissues within a fold are exactly the same tissues as in skin between folds. What , therefore causes the skin to fold?
 
@@ -397,25 +397,33 @@ So the spatial distibution of collagen is involved in follicle curvature. That i
 \subsection{Auxiliary issues}
  The pattern of folds over the sheep's body noted in section~\ref{sec:pattern} is not fully understood. The fact that the folds always run in the same direction implies that either the expansion in superlayer (a) is directional, or the collagen binding in super-layer (b) is directional, or some other factor interferes to provide a direction. We are not sure, but we favour the last possibility, because another factor can be identified. We have noted that each fold occupies one dermatome. A dermatome is an area of skin associated with one major nerve channel which runs from the spine downwards. The position of the nerve channel may be involved in deciding where the skin is to fold. The major nerve channel is in the hypodermus, and minor nerves run from there into the dermis, like risers in a plumbing system. So at the position where the 'risers' cross from hypodermis to dermis the two layers cannot move independently. So at these points the two layers would be 'anchored' together. There are rows of such 'anchor points' running from the spine downward. The skin folds parallel to these rows. We do not know if the rows of anchor points are under the folds, or between folds. That is, we do not know where the major nerve channel is in relation to the fold. One might guess that the 'anchor points' are between folds so that the expansion of super-layer (a) between each pair of anchor points forms the fold.
 
-There are also major blood vessels in the hypodermis, both arteries and veins. Thes also have minor branches which cross the boundary into the dermis, like risers.   There is some information on nerves and blood vessels in sheep skin in Lyne and Hollis (1968)~\cite{lyne:68}, but we have been unable to find the exact arrangement of blood vessels. The same  considerations apply as for nerves, the blood vessels may determine 'anchor points' at which the dermis cannot move against the hypodermis.
+There are also major blood vessels in the hypodermis, both arteries and veins. These also have minor branches which cross the boundary into the dermis, like risers.   There is some information on nerves and blood vessels in sheep skin in Lyne and Hollis (1968)~\cite{lyne:68}, but we have been unable to find the exact arrangement of blood vessels. The same  considerations apply as for nerves, the blood vessels may determine 'anchor points' at which the dermis cannot move against the hypodermis.
 
 Wrinkled and wrinkle-free sheep also differ in follicle density, S/P ratio, diameter of primary fibres (Dp) and diameter of secondary fibres (Ds). Three of these (follicle density, Dp, and Ds) can be understood as effects of the greater expansion of the upper skin layers in wrinkled sheep. Wrinkled sheep have more skin area, but they do not have more follicles per head, because the follicles are all formed in utero, while the skin expansion occurs after birth as the sheep matures. This simply spreads the follicles over more skin, and the density is less. The effects on Dp and Ds are a consequence of the density effect.  However the lower S/P ratio of wrinkled sheep is not thus explained.  The diameter results are confirmed by Scobie et al (2005)~\cite{scob:05}
 
-Apart from being more curved, follicles in wrinkled sheep are also longer. Both the straight length and the curved length are greater. Also the traditional follicle depth measure, which is the average vertical distance of follicle bulbs below the skin surface, is also larger in wrinkled sheep.  If the presence of collagen makes fdeveloping follicles curve, is it possible that it also prolongs their development so that they grow longer? 
+Apart from being more curved, follicles in wrinkled sheep are also longer. Both the straight length and the curved length are greater. Also the traditional follicle depth measure, which is the average vertical distance of follicle bulbs below the skin surface, is also larger in wrinkled sheep.  If the presence of collagen makes developing follicles curve, is it possible that it also prolongs their development so that they grow longer? 
 
-There is a biological connection between the development of follicles and the development of collagen. The papilla cells in follicles are differentiated fibroblasts. The fibrocyte cells which produce collagen fibres are also differentiated fobroblasts.  There is an established theory about the way pre-papilla cells distribute to follicle papillae, and the effects this has on follicle density and fibre diameters (Moore et al (1989)~\cite{moor:89}, Moore et al (1998)~\cite{moor:98}). There is no such theory for collagen. It may be that the population of fibroblast cells is limited in number at some stages so that a {\em tradeoff} sitauation might exist between follicle development and collagen development. This might explain the lower S/P ratio of wrinkled sheep.
+There is a biological connection between the development of follicles and the development of collagen. The papilla cells in follicles are differentiated fibroblasts. The fibrocyte cells which produce collagen fibres are also differentiated fibroblasts.  There is an established theory about the way pre-papilla cells distribute to follicle papillae, and the effects this has on follicle density and fibre diameters (Moore et al (1989)~\cite{moor:89}, Moore et al (1998)~\cite{moor:98}). There is no such theory, that we are aware of, for collagen. It may be that the population of fibroblast cells is limited in number at some stages so that a {\em tradeoff} sitauation might exist between follicle development and collagen development. This might explain the lower S/P ratio of wrinkled sheep.
 
-\subsection{Predictions}
-We can check if the above hypotheses are robust by using them to predict some previously unobserved phenomena. We make the folowing predictions
-\begin{description}
-\item[wrinkle epistasis]
-\item[follicle orientation]
-\item[curvature and diameter]
-\item[non-Merino breeds]
-\item[pin wrinkle and secondary original follicles]
-\end{description}
+\subsection{Predictions and verifications of hypotheses}
+We can check if the above hypotheses are robust by using them to predict some previously unobserved phenomena. We make a number of predictions and check each in turn against new data.
 
-\subsection{Checking on predictions}
+\subsubsection{Wrinkle epistasis}
+The two factor wrinkle formation hypothesis asserts that for skin folds to form there must be both hard collagen binding the lower dermis, and excessive growth of the upper dermis probably attributable to large numbers of secondary original follicles. Under this model, only sheep with both factors present at a sufficient level will form folds. This implies that the two factors interact. So we predict that the quantitative genetics of wrinkle will involve an epistatic interactin between the genes for hard collagen and the genes for large number of secondary follicles. This is something which can be checked.
+
+We were able to access data from five CSIRO experimental flocks in which degree of wrinkle had been observed according to the photographic standards of Turner, et al (1953). These flocks were fully pedigreed and contained a total of 22200 sheep with data. A mixed model was fitted which removed fixed effects and estimated components of variance of wrinkle score  for individual environment, individual additive genetic, individual additive x additive epistatic , maternal additive genetic, and maternal environmental components, for each flock.  Here we just present a summary as a pie chart in Figure~\ref{fig:qgwrin} showing the average of the component estimates over the five flocks, as percentages of total variance. 
+%\input{figqgwrin.tex}
+There is a full writeup of these analyses available in Jackson and Watts (2018)~\cite{jack:18}. These analyses are too extensive to present here. The colclusion, however, is important. Figure~\ref{fig:qgwrin} shows that 29 percent of the variance of wrinkle is additive genetic, and 18 percent is additive x additive epistatic. We regard this as a verificvatin of the two factor hypothesis.
+
+
+\subsubsection{Follicle orientation}
+
+\subsubsection{Curvature and diameter}
+
+\subsubsection{Non-Merino breeds}
+
+\subsubsection{Pin wrinkle and secondary original follicles}
+
 
 \section{Conclusion}
 
@@ -458,7 +466,7 @@ Jackson, N. (2017) Genetics of primary and secondary fibre diameters and densiti
 Jackson, N. (2017) Genetic relationship between skin and wool traits in Merino sheep. Part I Responses to selection ans estimates of genetic parameters. URL https://github.com/nevillejackson/Fleece-genetics/tree/master/skinandfleeceparameters/ab3220/skinwool1.pdf
 
 \bibitem{jack:18}
-Jackson, N. and Watts, J.E. (2018) Does follicle development affect the spatial layout of sheep skin? URL https://github.com/nevillejackson/Fleece-biology/tree/master/skinspace/skinspace.pdf
+Jackson, N. and Watts, J.E. (2018) Quantitative genetics of skin wrinkle in sheep. URL https://github.com/nevillejackson/Fleece-genetics/blob/master/qgwrinkle/qgwrinkle.pdf
 
 \bibitem{jack:90}
 Jackson, N., Maddocks, I.G., Lax, J., Moore, G.P.M. and Watts, J.E. (1990) Merino Evolution, Skin Characteristics, and Fleece Quality. URL https://github.com/nevillejackson/atavistic-sheep/mev/evol.pdf 
