Piechart for qgwrin

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -409,11 +409,11 @@ There is a biological connection between the development of follicles and the de
 We can check if the above hypotheses are robust by using them to predict some previously unobserved phenomena. We make a number of predictions and check each in turn against new data.
 
 \subsubsection{Wrinkle epistasis}
-The two factor wrinkle formation hypothesis asserts that for skin folds to form there must be both hard collagen binding the lower dermis, and excessive growth of the upper dermis probably attributable to large numbers of secondary original follicles. Under this model, only sheep with both factors present at a sufficient level will form folds. This implies that the two factors interact. So we predict that the quantitative genetics of wrinkle will involve an epistatic interactin between the genes for hard collagen and the genes for large number of secondary follicles. This is something which can be checked.
+The two factor wrinkle formation hypothesis asserts that for skin folds to form there must be both hard collagen binding the lower dermis, and excessive growth of the upper dermis probably attributable to large numbers of secondary original follicles. Under this model, only sheep with both factors present at a sufficient level will form folds. This implies that the two factors interact. So we predict that the quantitative genetics of wrinkle will involve an epistatic interaction between the genes for hard collagen and the genes for large number of secondary follicles. This is something which can be checked.
 
 We were able to access data from five CSIRO experimental flocks in which degree of wrinkle had been observed according to the photographic standards of Turner, et al (1953). These flocks were fully pedigreed and contained a total of 22200 sheep with data. A mixed model was fitted which removed fixed effects and estimated components of variance of wrinkle score  for individual environment, individual additive genetic, individual additive x additive epistatic , maternal additive genetic, and maternal environmental components, for each flock.  Here we just present a summary as a pie chart in Figure~\ref{fig:qgwrin} showing the average of the component estimates over the five flocks, as percentages of total variance. 
-%\input{figqgwrin.tex}
-There is a full writeup of these analyses available in Jackson and Watts (2018)~\cite{jack:18}. These analyses are too extensive to present here. The colclusion, however, is important. Figure~\ref{fig:qgwrin} shows that 29 percent of the variance of wrinkle is additive genetic, and 18 percent is additive x additive epistatic. We regard this as a verificvatin of the two factor hypothesis.
+\input{figqgwrin.tex}
+There is a full writeup of these analyses available in Jackson and Watts (2018)~\cite{jack:18}. These analyses are too extensive to present here. The conclusion, however, is important. Figure~\ref{fig:qgwrin} shows that 29 percent of the variance of wrinkle is additive genetic, and 18 percent is additive x additive epistatic. We regard this as a verification of the two factor hypothesis.
 
 
 \subsubsection{Follicle orientation}
