Discussion section on follcurv hypothesis and follicle disruption

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -417,6 +417,20 @@ There is a full writeup of these analyses available in Jackson and Watts (2018)~
 
 
 \subsubsection{Follicle orientation}
+The follicle curvature hypothesis asserts that presence of large amounts of collagen in the developing foetus interferes with downgrowth of the follicle plugs causing them to curve. If this is correct one would also expect 
+\begin{itemize}
+\item fibres from such follicles to have more variable emergence angles, 
+\item the plane of curvature of follicles and fibres to be more variable
+\item follicle groups to be more disrupted
+\end{itemize}
+
+We were not able to check on all of these predictions, but there is a small amount of data shown in Table~\ref{tab:disrupt} comparing wrinkled and wrinkle-free sheep for fibre emergence angle and follicle group orientation.
+\input{tabdisrupt.tex}
+The wrinkled sheep are certainly more variable in bot fibre emergence angle and follicle group orientation. We have no data on plane of curvature. That would involve looking at the orientation of the bilateral ortho/para cortex segmentation.
+
+It is clear that the follicles in wrinkled sheep are more dislocated, both singly and in groups. That does not prove that the foetal collagen development  has caused this.  We can get closer to a verification by plotting amount of collagen ( measured by integrated optical density of PSR stained sections) in adult skin sections against CVof fibre emergence angle for individual sheep. This is done in Figure~\ref{fig:disrupt}
+\input{figdisrupt.tex}
+We see a correlation of 0.47 which is significant.
 
 \subsubsection{Curvature and diameter}
 
