end of Discussion and Conclusion + fix date

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -13,7 +13,7 @@
 
 \title{Histology of collagen in Merino sheep skin and its association with skin wrinkle formation and follicle curvature }
 \author{The late J.E. Watts S. Maleki, P.G. Swan, J. Gordon, and N. Jackson}
-\date{10 June 2019} 
+\date{19 Nov 2019} 
 
  
 \begin{document} 
@@ -426,20 +426,56 @@ The follicle curvature hypothesis asserts that presence of large amounts of coll
 
 We were not able to check on all of these predictions, but there is a small amount of data shown in Table~\ref{tab:disrupt} comparing wrinkled and wrinkle-free sheep for fibre emergence angle and follicle group orientation.
 \input{tabdisrupt.tex}
-The wrinkled sheep are certainly more variable in bot fibre emergence angle and follicle group orientation. We have no data on plane of curvature. That would involve looking at the orientation of the bilateral ortho/para cortex segmentation.
+The wrinkled sheep are certainly more variable in both fibre emergence angle and follicle group orientation. We have no data on plane of curvature. That would involve looking at the orientation of the bilateral ortho/para cortex segmentation.
 
-It is clear that the follicles in wrinkled sheep are more dislocated, both singly and in groups. That does not prove that the foetal collagen development  has caused this.  We can get closer to a verification by plotting amount of collagen ( measured by integrated optical density of PSR stained sections) in adult skin sections against CVof fibre emergence angle for individual sheep. This is done in Figure~\ref{fig:disrupt}
+It is clear that the follicles in wrinkled sheep are more dislocated, both singly and in groups. That does not prove that the foetal collagen development  has caused this.  We can get closer to a verification by plotting amount of collagen ( measured by integrated optical density of PSR stained sections) in adult skin sections against CV of fibre emergence angle for individual sheep. This is done in Figure~\ref{fig:disrupt}
 \input{figdisrupt.tex}
-We see a correlation of 0.47 which is significant.
+We see a correlation of 0.47 which is significant at the 1 percent level for 36 individuals.  This is not the ideal verification. We really need a study of foetal collagen development against follicle development.
 
 \subsubsection{Curvature and diameter}
+Wrinkled sheep have high follicle curvature, but wrinkle-free sheep do not have zero follicle curvature. All sheep (except lustre mutants) have a small degree of follicle curvature, and therefore all wool is crimped. This intrinsic curvature of all follicles has nothing to do with dermal collagen, but seems to be an inbuilt asymmetrey in follicles. The interesting thing is that this inbuilt curvature of follicles, and the resultant wavelength of crimp in wool staples, seems to be related to fibre diameter.  It is the additional curvature which is caused by dermal collagen that is not related to fibre diameter. 
+
+This explains why the traditional method of appraising fibre diameter ( looking at the crimp frequency) works quite well for old fashioned coarser wooled sheep, but is not accurate for Merino wool where the presence of collagen and wrinkles adds more curvature and interferes with the relationship with diameter. It also explains why the trend in Australian Fine Merino breeding over the period 1900 to about 1970 towards higher crimp frequencies, did not lead to finer diameters. 
+
+Given the above, we might predict that an analysis of the relationship between crimp ( or follicle curvature) and fibre diameter in Merino sheep should be able to demonstrate that crimp ( or follicle curvature) variation has two parts, one which is diameter related, and one which is wrinkle (or collagen) related.
+
+
+\subsubsection{Traits correlated with wrinkle score}
+Because dermal collagen is a cause of both skin wrinkle and follicle curvature, it would be expected that wrinkle score and follicle curvature score would have a positive genetic correlation. 
+
+There is ample evidence for this. Jackson, Nay, and Turner (1975)~\cite{jack:75} obtained a genetic correlation of 0.68 between follicle curvature and wrinkle score.  Jackson (2017)~\cite{jack:17a} obtainied a genetic correlation of 0.69 with a 95 percent confidence interval of 0.65 to 0.74. Phenotypic and environmental correlations were also positive.
+
+Some slightly more indirect evidence is given by correlations between crimp frequency and wrinkle score. There are other factors in staple crimp apart from follicle curvature, but the relationship is close. One would expect positive correlations between crimp frequency and wrinkle score. 
+
+There are many estimates  of crimp x wrinkle correlation. We take the estimate of Brown and Turner (1968)~\cite{brow:68} which is $0.28 \pm 0.07$. Not as large, but still positive. Staple crimp is not exactly follicle curvature. 
 
 \subsubsection{Non-Merino breeds}
+The two factor wrinkle hypothesis explains why only Merino and Merino derived breeds have skin folds. No other breed has the high S/P ratio , and without this there is insufficient expansionary growth of the dermis and epidermis to cause folding. 
 
-\subsubsection{Pin wrinkle and secondary original follicles}
+Some non-Merino breeds ( eg Downs wool breeds) have a higher crimp frequency than would be expected for their fibre diameter, and we predict that these breeds  would have a high content of dermal collagen of Type 1.
+
+We do not have the data to check this directly . It is common knowledge that Downs wool has a high fibre curvature but fibre alignment is the staple is very disorganised. This is exactly what one would expect if dermal collagen was interfering with follicle development. It needs to be checked.
+
+Practically nothing is known about breed variation in pin-wrinkle.  We suspect that the Karakul breed may have some form of wrinkle in lambs, but not in adults.   The Karakul does not have a high S/P ratio, but the very curly coat of lambs indicates collagen interfering with follicle development.
+
+\subsection{Breeding implications}
+If the two factor wrinkle formation hypothesis is correct, and if wrinkle really does exhibit epistatic variation, then breeding to reduce wrinkle by selection on observed wrinkle scores will have a problem. Such selection would tend to choose both sheep with few secondary follicles ( low dermal expansion) and sheep with Type 3 collagen. Only the latter is desirable, as sheep with few follicles will be poor producers. 
+
+One way to avoid this selection issue would be to select directly for Type 3 collagen by observing loosness and suppleness of the skin.  
 
 
 \section{Conclusion}
+\begin{verbatim}
+Roughly I want to say that we understand how wrinkles form as an
+ interaction between two skin layers growing at different rates
+ and bound together to various degrees by various grades of collagen.
+
+Then I want to say that this understanding might help with breeding
+ of wrinkle-free Merinos.
+
+Then I want to comment that understanding the effect of collagen 
+on follicle curvature is a bonus spinoff from the wrinkle study. 
+\end{verbatim}
 
 
 
@@ -477,7 +513,7 @@ Jackson, N., Nay, T, and Turner, Helen Newton (1975) Response to selection in Au
 Jackson, N. (2017) Genetics of primary and secondary fibre diameters and densities in Merino sheep. URL https://github.com/nevillejackson/atavistic-sheep/mev-rewrite/supplementary/genetic-parameters/psparam.pdf
 
 \bibitem{jack:17a}
-Jackson, N. (2017) Genetic relationship between skin and wool traits in Merino sheep. Part I Responses to selection ans estimates of genetic parameters. URL https://github.com/nevillejackson/Fleece-genetics/tree/master/skinandfleeceparameters/ab3220/skinwool1.pdf
+Jackson, N. (2017) Genetic relationship between skin and wool traits in Merino sheep. Part I Responses to selection and estimates of genetic parameters. URL https://github.com/nevillejackson/Fleece-genetics/tree/master/skinandfleeceparameters/ab3220/skinwool1.pdf
 
 \bibitem{jack:18}
 Jackson, N. and Watts, J.E. (2018) Quantitative genetics of skin wrinkle in sheep. URL https://github.com/nevillejackson/Fleece-genetics/blob/master/qgwrinkle/qgwrinkle.pdf
